--- a/pokemon-win-95/src/App.css
+++ b/pokemon-win-95/src/App.css
@@ -58,3 +58,23 @@
   width: 22px;
   margin-right: 0.4rem;
 }
+
+.pull-left {
+  float: left;
+}
+
+.pull-right {
+  float: right;
+}
+
+.h1 {
+  font-size: 2rem;
+}
+
+.mt2 {
+  margin-top: 2rem;
+}
+
+.text-align-l {
+  text-align: left;
+}
